--- a/units/unit6/testbase.yaml
+++ b/units/unit6/testbase.yaml
@@ -1,6 +1,5 @@
 testbed:
   name: "plugin homework"
-  class: save_homework.CopyReport
   custom:
     directory: './custom'
-    report-directory: './data'
+    report_directory: './data'
