--- a/units/unit5/Dockerfile
+++ b/units/unit5/Dockerfile
@@ -1,11 +1,10 @@
 FROM python:3.6.5-slim
 RUN apt-get update && apt-get install -y gcc && apt-get autoclean -y
 WORKDIR /my-tests
-#COPY requirements.txt rabbit.py rabbitj.py ./
+COPY requirements.txt rabbit.py rabbitj.py ./
 RUN pip install --upgrade pip wheel setuptools && \
-pip install pyats
-#pip install --no-cache-dir -r requirements.txt && \
-#rm -v requirements.txt
+pip install --no-cache-dir -r requirements.txt && \
+rm -v requirements.txt
 VOLUME /my-tests/archive
 ENV TINI_VERSION v0.18.0
 ADD https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini /tini
