--- a/cisco/testbed.yaml
+++ b/cisco/testbed.yaml
@@ -1,7 +1,7 @@
 devices:
   c3745:
     type: 'cisco 3745'
-    os: 'cisco ios'
+    os: 'iosxe'
     tacacs:
       login_prompt: cisco
       password_prompt: cisco
@@ -12,7 +12,15 @@ devices:
       line: cisco
       linux: cisco
     connections:
+      defaults:
+        class: 'unicon.Unicon'
       a:
         protocol: telnet
         ip: 127.0.0.1
-        port: 5000
+        port: 5002
+
+#topology:
+#  c3745:
+#    interfaces:
+#      Ethernet0/1:
+#        type: fastEthernet
