add interfaces info

--- a/cisco/c3725_startup-config.cfg
+++ b/cisco/c3725_startup-config.cfg
@@ -6,12 +6,11 @@ service timestamps debug datetime msec
 service timestamps log datetime msec
 no service password-encryption
 !
-hostname Router1
+hostname Router2
 !
 boot-start-marker
 boot-end-marker
 !
-no logging console
 !
 no aaa new-model
 memory-size iomem 5
@@ -22,8 +21,8 @@ ip cef
 !
 !
 no ip domain lookup
-ip auth-proxy max-nodata-conns 3
-ip admission max-nodata-conns 3
+!
+multilink bundle-name authenticated
 !
 !
 !
@@ -38,17 +37,27 @@ ip admission max-nodata-conns 3
 !
 !
 !
+!
+!
+!
+!
+!
+!
+!
+archive
+ log config
+  hidekeys
+! 
 !
 !
 !
 ip tcp synwait-time 5
-! 
 !
 !
 !
 !
 interface FastEthernet0/0
- ip address 192.168.1.1 255.255.255.0
+ ip address 192.168.1.2 255.255.255.0
  no shutdown
  duplex auto
  speed auto
@@ -66,6 +75,8 @@ no ip http server
 no ip http secure-server
 !
 no cdp log mismatch duplex
+!
+!
 !
 !
 !
