--- a/cisco/testbed.yaml
+++ b/cisco/testbed.yaml
@@ -1,7 +1,7 @@
 devices:
-  c3745:
-    type: 'cisco 3745'
-    os: 'iosxe'
+  Router1:
+    os: iosxe
+    type: CSR1000v
     tacacs:
       login_prompt: cisco
       password_prompt: cisco
@@ -18,9 +18,41 @@ devices:
         protocol: telnet
         ip: 127.0.0.1
         port: 5002
+    custom:
+      abstraction:
+        order: [os, type]
 
-#topology:
-#  c3745:
-#    interfaces:
-#      Ethernet0/1:
-#        type: fastEthernet
+  Router2:
+    os: iosxe
+    type: CSR1000v
+    tacacs:
+      login_prompt: cisco
+      password_prompt: cisco
+      username: cisco
+    passwords:
+      tacacs: cisco
+      enable: cisco
+      line: cisco
+      linux: cisco
+    connections:
+      defaults:
+        class: 'unicon.Unicon'
+      a:
+        protocol: telnet
+        ip: 127.0.0.1
+        port: 5001
+    custom:
+      abstraction:
+        order: [os, type]
+
+topology:
+  Router1:
+    interfaces:
+      FastEthernet0/0:
+        ipv4: 192.168.1.1/24
+        type: ethernet
+  Router2:
+    interfaces:
+      FastEthernet0/0:
+        ipv4: 192.168.1.2/24
+        type: ethernet
