--- a/cisco/c3725_startup-config.cfg
+++ b/cisco/c3725_startup-config.cfg
@@ -6,7 +6,7 @@ service timestamps debug datetime msec
 service timestamps log datetime msec
 no service password-encryption
 !
-hostname Router2
+hostname c3725
 !
 boot-start-marker
 boot-end-marker
