--- a/cisco/c3745_startup-config.cfg
+++ b/cisco/c3745_startup-config.cfg
@@ -6,7 +6,7 @@ service timestamps debug datetime msec
 service timestamps log datetime msec
 no service password-encryption
 !
-hostname Router1
+hostname c3745
 !
 boot-start-marker
 boot-end-marker
