--- a/cisco/configs.yaml
+++ b/cisco/configs.yaml
@@ -1,6 +1,11 @@
 devices:
   uut:
     1:
-      config: 'c3745_confg'
-      sleep: 0
+      config: 'c3745'
+      sleep: 3
+      invalid: ['!']
+  uut1:
+    2:
+      config: 'c3725'
+      sleep: 3
       invalid: ['!']
