--- a/cisco/testbed.yaml
+++ b/cisco/testbed.yaml
@@ -28,7 +28,7 @@ devices:
       a:
         protocol: telnet
         ip: 127.0.0.1
-        port: 5000
+        port: 5002
     custom:
       abstraction:
         order: [os, type]
@@ -53,6 +53,30 @@ devices:
         protocol: telnet
         ip: 127.0.0.1
         port: 5001
+    custom:
+      abstraction:
+        order: [os, type]
+
+  asa:
+    os: asa
+    type: asa
+    alias: uut2
+    tacacs:
+      login_prompt: cisco
+      password_prompt: cisco
+      username: cisco
+    passwords:
+      tacacs: cisco
+      enable: cisco
+      line: cisco
+      linux: cisco
+    connections:
+      defaults:
+        class: 'unicon.Unicon'
+      a:
+        protocol: telnet
+        ip: 192.168.122.4
+        port: 23
     custom:
       abstraction:
         order: [os, type]
