--- a/cisco/testbed.yaml
+++ b/cisco/testbed.yaml
@@ -1,7 +1,7 @@
 devices:
   Router1:
     os: iosxe
-    type: CSR1000v
+    type: C3745
     tacacs:
       login_prompt: cisco
       password_prompt: cisco
@@ -17,14 +17,14 @@ devices:
       a:
         protocol: telnet
         ip: 127.0.0.1
-        port: 5000
+        port: 5004
     custom:
       abstraction:
         order: [os, type]
 
   Router2:
     os: iosxe
-    type: CSR1000v
+    type: C3745
     tacacs:
       login_prompt: cisco
       password_prompt: cisco
@@ -40,7 +40,7 @@ devices:
       a:
         protocol: telnet
         ip: 127.0.0.1
-        port: 5001
+        port: 5005
     custom:
       abstraction:
         order: [os, type]
